--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ plugins {
 	id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+
 }
+apply plugin : 'war'
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
@@ -24,7 +26,11 @@ dependencies {
 		compile('org.springframework.boot:spring-boot-starter-data-jpa')
 		compile('mysql:mysql-connector-java')
 
+
 		testCompile('org.springframework.boot:spring-boot-starter-test')
+		providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+
+
 
 	}
 }
